css/index.css
html {
  height: 100%;
}

body {
  font-family: "Roboto", sans-serif;
  margin: 0;
  color: #333333;
  font-size: 1.1em;
  line-height: 1.6;
}

header {
  background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.15)),
    url("../img/mountains-placeholder.jpg");
  background-position: bottom;
  background-size: cover;
  height: 100vh;
}

.mountains {
  position: absolute;
  width: 100%;
  height: 100vh;
  object-fit: cover;
  object-position: bottom;
}

.gradient-layer::after {
  background: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0.25),
    rgba(0, 0, 0, 0.15)
  );
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100vh;
  display: inline-block;
}

.header-text {
  display: flex;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  height: 100vh;
}

nav {
  display: flex;
  padding: 20px 0 15px 0;
  text-align: center; /* center align stuff in nav */
  max-width: 300px;
  margin: auto;
}

nav span {
  margin: auto;
  z-index: 1; /* otherwise nav links fall behind the header background image */
  height: 20px;
}

.title-block {
  margin: auto;
  justify-content: center;
  align-items: center;
}

.title {
  text-align: center;
  font-weight: 700;
  color: white;
  letter-spacing: 0.05em;
  margin: auto;
  margin-bottom: 15px;
}

.title span {
  max-width: 250px;
  display: inline-block;
  padding: 0.02em 0.5em;
  border: #fbfbfb solid 10px;
  margin: 10px;
}

.kicker {
  text-align: center;
  font-weight: 700;
  letter-spacing: 0.05em;
  color: white;
  font-size: 1.25em;
  margin: auto;
}

.primary-content {
  /* padding: 0 20px; */
  padding: 5%;
}

section {
  margin: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/*for small grey line after sections that are not the last*/
section:not(:last-child)::after {
  content: "";
  border-bottom: 2px solid #d8dada;
  width: 300px;
  padding-top: 50px;
  justify-content: center;
  align-content: center;
}

.section-header {
  margin: 40px 0 50px 0;
  text-align: center;
  font-weight: bold;
  font-size: 2em;
}

.selfie-pic {
  max-width: 150px;
  max-height: 150px;
  margin: 0 auto 30px;
  border-radius: 100%;
}

/* .section-text {
  padding: 0 2em;
} */

.about-text p {
  margin: 10px auto;
}

.work-item {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto auto auto;
  grid-template-areas:
    "pic"
    "header"
    "text";
  text-align: center;
  margin: auto;
  margin-bottom: 50px;
}

.work-item:last-child {
  margin-bottom: 0;
}

.work-image {
  max-width: 264px;
  max-height: 164px;
  border: 6px solid #fff;
  border-radius: 2px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
  grid-area: pic;
}

.work-title {
  font-size: 1.4em;
  margin: 0.75em 0 0 0;
  grid-area: header;
}

.work-description {
  margin: 1em 0;
  grid-area: text;
}

.contact-section {
  text-align: center;
  margin: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 80px; /* extra white space at bottom */
}

.email-link {
  margin: 10px 0 35px 0;
  font-size: 1.1em;
}

.social {
  margin: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.social-header {
  margin: auto;
}

.social-icons {
  display: flex;
  margin: auto;
  justify-content: center;
  align-items: center;
}

/*link styling*/

nav a {
  font-size: 0.9em;
  font-weight: 700;
  text-decoration: none;
  color: white;
}

nav a:hover {
  color: #333;
  box-shadow: inset 0 -2px 0 0 #333; /* emulate the border */
  padding-bottom: 6px;
}

.about-text a,
.work-links a {
  text-decoration: none;
  color: #6f90b2;
  font-weight: 500;
}

.contact-section a {
  text-decoration: none;
  color: #333;
  font-weight: 500;
}

.highlight {
  color: #6f90b2;
  display: inline-block;
}

.about-text a:visited,
.work-links a:visited,
.contact-section a:visited {
  text-decoration: none;
}

.social-link {
  margin: 10px 25px 0 25px;
  font-size: 2em;
}

.work-links a {
  font-size: 1.1em;
  margin: auto 15px;
}

.about-text a:hover,
.work-links a:hover,
.contact-section a:hover {
  color: #333;
  padding-bottom: 5px;
  box-shadow: inset 0 -2px 0 0 #333; /* emulate the border */
}

.email-link:hover > div {
  color: #333;
}

/* subtract 5px from margin-bottom to prevent content from shifting */

.email-link:hover {
  margin: 10px 0 30px 0;
}

.social-link:hover {
  margin: 10px 25px -5px 25px;
}

/* for lazy loading images */

.fade-in {
  animation-name: fadeIn;
  animation-duration: 1.3s;
  animation-timing-function: cubic-bezier(0, 0, 0.4, 1);
  animation-fill-mode: forwards;
}

.fade-out {
  animation-name: fadeOut;
  animation-duration: 1.3s;
  animation-timing-function: cubic-bezier(0, 0, 0.4, 1);
  animation-fill-mode: forwards;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes fadeOut {
  from {
    opacity: 1;
  }

  to {
    opacity: 0;
  }
}

@media (min-width: 760px) {
  /* about iPad resolution */
  .title {
    font-size: 2.2em;
  }

  .title span {
    min-width: 331px;
  }

  .kicker {
    font-size: 1.3em;
  }

  nav {
    font-size: 1.1em;
    max-width: 500px;
  }

  body {
    font-size: 1.1em;
  }

  section {
    max-width: 650px;
  }

  .selfie-pic {
    max-width: 180px;
    max-height: 180px;
  }

  .section-header {
    font-size: 2.2em;
  }

  .work-image {
    max-width: 300px;
    max-height: 200px;
  }

  .email-link {
    font-size: 1.3em;
  }

  .social-header {
    font-size: 1.1em;
  }

  .social-link {
    margin: 10px 25px 0 25px;
    font-size: 2.3em;
  }
}

@media (min-width: 780px) {
  /* restyle work section */
  .work-item {
    display: grid;
    grid-template-columns: 2fr 1.5fr;
    grid-template-rows: auto;
    grid-template-areas: "pic text";
    grid-column-gap: 30px;
    text-align: center;
    margin: auto;
    margin-bottom: 60px;
    align-items: center;
  }

  .work-item:nth-child(2n + 2) {
    display: grid;
    grid-template-columns: 1.5fr 2fr;
    grid-template-rows: auto;
    grid-template-areas: "text pic";
    grid-column-gap: 30px;
    text-align: center;
    margin: auto;
    margin-bottom: 60px;
    align-items: center;
  }

  .work-image {
    max-width: 350px;
    max-height: 250px;
    border: 6px solid #fff;
    border-radius: 2px;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    grid-area: pic;
  }

  .work-text {
    grid-area: text;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .work-title {
    margin: 0 auto;
  }
}

@media (min-width: 960px) {
  section {
    max-width: 750px;
  }

  nav {
    font-size: 1.2em;
  }

  .work-image {
    max-width: 400px;
    max-height: 300px;
  }
}

